--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Insert or type text to check:</h1>
+  <h1>Paste or type text to check:</h1>
 
   <form onsubmit="return false;">
     <div class="wrapper">
